eks-setup/manifests/postgres-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    app: postgres
