eks-setup/manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: app
  labels:
    app: sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: sample-app
          image: mohammadimran0186/sample-app:localtest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
