eks-setup/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: database
  labels:
    app: postgres
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app: postgres
